--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <title>Song City</title>
 </head>
 <body>
+    <style>
+        body {
+            background-image: url(../Assets/CSS/Images/road_background.jpg);
+        }
+
+        .main {
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+            font-size: 65px;
+            margin: 20px;
+        }
+    </style>
+    
+    <h1 class="main">Song City</h1>
+
     
 </body>
 </html>
