--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Testing Api's</title>
 </head>
+
 <body>
-    
+    <h2 id="displayDiv"></h2>
+    <h2 class="artist"></h2>
+    <div id="map">Test Area</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script>
+
+
+        function testingApi() {
+            var apiKey = "jqnjIbmIDCL7UaGiP6SPvbfGTlGTs9z0"
+            var street = "katella"
+            var city = "Anaheim,CA"
+            var queryURL = "http://www.mapquestapi.com/geocoding/v1/address?key=" + apiKey + "&adminArea1=US" + city + "&adminArea5=" + city + "&street=" + street;
+
+            $.ajax({
+                url: queryURL,
+                method: "GET"
+            }).then(function (response) {
+                $("#displayDiv").text("Latitude: " + response.results[0].locations[0].latLng.lat + " Longitude: " + response.results[0].locations[0].latLng.lng);
+                var postalCode = response.results[0].locations[0].postalCode;
+                var longitude = response.results[0].locations[0].latLng.lng;
+                var latitude = response.results[0].locations[0].latLng.lat;
+                $("#displayDiv").append(" Zip Code: " + postalCode)
+
+                L.mapquest.key = "jqnjIbmIDCL7UaGiP6SPvbfGTlGTs9z0";
+
+                // 'map' refers to a <div> element with the ID map
+                L.mapquest.map('map', {
+                    center: [latitude, longitude],
+                    layers: L.mapquest.tileLayer('map'),
+                    zoom: 15
+                });
+
+                var addressID = (longitude % latitude);
+                console.log(addressID);
+
+            });
+        }
+
+        testingApi()
+
+
+
+
+
+
+
+
+    </script>
+
+
+
 </body>
+
 </html>
