--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <label class="active" for="zip">Zip Code</label>
                 </div>
         </div>
-        <div class="row center-align">
+        <div class="button center-align">
             <button class="btn waves-effect waves-light" id="submit" type="button" name="action"><i class="material-icons right">audiotrack</i>Submit
                         </button>
         </div>
 
-        <div class="row center-align">
+        <div class="button center-align">
             <button class="btn waves-effect waves-light" id="loveit" type="button" name="action"><i class="material-icons right">audiotrack</i>I
                 Love It
             </button>
@@ -66,6 +66,7 @@
         <!-- <div class="row">
             <div class="col s12"> -->
                 <div class="center-align" id="displayDiv">
+                    <p class="placeholder">510 EAST PELTASON DRIVE IRVINE, CA 92697</p>
                 </div>
             <!-- </div>
         </div> -->
